2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h:
	* Headers/CoreFoundation/CFBase.h: Revert previous change, the correct
	place for CFSTR is in CFString.h.
	* Source/CFError.m: Include CFString.h.

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h: Moved CFSTR definition from here...
	* Headers/CoreFoundation/CFBase.h: To here.
	* Source/CFError.m:
	* Source/CFString.m: Use CFSTR() instead of @"".

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFBase.h
	* Headers/CoreFoundation/CFPropertyList.h:
	* Source/GNUmakefile:
	* Source/CFPropertyList.m: Added rudimentary CFPropertyList
	implementaion

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFStream.h:
	* Source/GNUmakefile:
	* Source/CFStream.m: Added CFStream implementation.

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h: Add availability macros.

2010-01-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.m:
	* Source/CFArray.m:
	* Source/CFData.m:
	* Source/CFDate.m:
	* Source/CFError.m:
	* Source/CFString.m:
	* Source/CFURL.m: Adopt to GNU coding standards.

2010-01-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFDate.m:
	* Headers/CoreFoundation/CFDate.h: Initial CFDate implementation
	* Headers/CoreFoundation/CoreFoundation.h: Added CFDate.h and CFURL.h

2010-01-21 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/CFURL.m:
	* Headers/CoreFoundation/CFURL.h: Start implementing CFURL

2010-01-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.m:
	* Source/CFError.m: Correct missing CFRetain in copied objects.

2010-01-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h: Include stdarg.h.
	* Headers/CoreFoundation/CoreFoundation.h: